# pystardog

./: .dockerignore  .env  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  docker-compose.cluster.yml  docker-compose.single-node.yml  docker-compose.yml  ideas.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
dockerfiles/: dockerfile-haproxy  dockerfile-mysql  dockerfile-mysql-music  dockerfile-mysql-videos  dockerfile-python  dockerfile-stardog  haproxy.cfg  stardog.cache.properties  stardog.node.properties  stardog.single.properties  stardog.standby.properties  start-standby.sh  start.sh
docs/: Makefile  conf.py  contributing.rst  getting-started.rst  index.rst  overview.rst  requirements.txt  summary.rst
docs/source/: admin.rst  connection.rst  content.rst  exceptions.rst  modules.rst  results.rst  stardog.cloud.rst  stardog.rst
examples/: krb5conn.py  voicebox_demo.tape  voicebox_example.py
notebooks/: README.md  tutorial.ipynb
stardog/: __init__.py  admin.py  connection.py  content.py  content_types.py  exceptions.py  results.py  utils.py
stardog/cloud/: __init__.py  client.py  exceptions.py  voicebox.py
stardog/http/: admin.py  client.py  connection.py  database.py  docs.py  graphql.py  icv.py  role.py  stored_queries.py  user.py  vcs.py  virtual_graphs.py
test/: conftest.py  pytest.ini  test_admin.py  test_admin_basic.py  test_cache.py  test_cloud_client.py  test_cloud_voicebox.py  test_cluster.py  test_connection.py  test_import.py  test_integration.py  test_results.py  test_server_admin.py  test_single_node.py  test_standby.py  test_star_import.py  test_unit.py  test_utils.py  utils.py
test/data/: beatles.sql  example.ttl  example.txt  icv-data.ttl  icv_report.ttl  ms_4.1_1.rdf  music.sms  music_mappings.ttl  music_schema.sql  namespaces.ttl  namespaces.xml  starwars.graphql  starwars.ttl  test_import.json  test_import_delimited.sms  test_import_delimited.tsv  test_import_json.sms  test_import_pipe.txt  videos.sql
test/http/: test_admin.py  test_connection.py
test/utils/: wait.sh
utils/: run_test_single_node.sh  run_tests.sh  wait.sh
