[metadata]
name = pystardog
version = 0.18.0
author = Stardog Union
author_email = support@stardog.com
description = Use Stardog with Python!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stardog-union/pystardog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests>=2.31.0
    requests-toolbelt>=1.0.0
    contextlib2>=0.5.5
    rdflib>=6.0.0
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest

[flake8]
ignore = E203,E501, W503

[pylint.'MESSAGES CONTROL']
disable = all
# We will only fail on Fatal, Errors and Warnings.
# https://pylint.pycqa.org/en/latest/user_guide/usage/run.html#exit-codes
enable = F,E,W
